@@ -435,7 +435,8 @@ class Item(models.Model):
 
     outer_id = models.CharField(max_length=64,blank=True,verbose_name='外部编码')
     num      = models.IntegerField(null=True,verbose_name='数量')
-
+    sync_stock = models.BooleanField(default=True,verbose_name='库存同步')
+    
     seller_cids = models.CharField(max_length=126,blank=True,verbose_name='卖家分类')
     approve_status = models.CharField(max_length=20,choices=APPROVE_STATUS,blank=True,verbose_name='在售状态')  # onsale,instock
     type       = models.CharField(max_length=12,blank=True,verbose_name='商品类型')
